# pauller-backend-fastapi

./: .env.example  .flake8  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: metadata.py
app/api/dependencies/: auth.py  permissions.py
app/api/errors/: permissions.py
app/api/routes/: api.py  polls.py  users.py
app/core/: config.py  events.py
app/db/: events.py
app/db/errors/: common.py  users.py
app/db/migrations/: migrate.py
app/db/migrations/versions/: 0001.create-tables.py
app/db/queries/: polls.py  tables.py  users.py
app/db/repositories/: polls.py  users.py
app/models/: common.py
app/models/schemas/: polls.py  users.py
app/resources/: strings.py
app/services/: auth.py  jwt.py  permissions.py  security.py
docker/: .dockerignore  entrypoint.sh
scripts/: format  lint
