[tool.poetry]
name = "pauller"
version = "0.0.0"
description = "The service for creating polls and voting"
authors = ["Alexandr <sasha.chikur@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
fastapi = {extras = ["uvicorn"], version = "^0.59.0"}
uvicorn = "^0.11.6"
asyncpg = "^0.20.1"
yoyo-database-migrations = "^0.1.0"
psycopg2-binary = "^2.8.5"
pydantic = {extras = ["email"], version = "^1.6.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
loguru = "^0.5.1"
flake8 = "^3.8.3"
autoflake = "^1.3.1"
isort = "^5.3.0"
black = "^19.10b0"
pyjwt = "^1.7.1"
fastapi_contrib = "^0.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
